--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.0",
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
